<resources>
    <string name="app_name">TotalFitness</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_verify_password">Verify password</string>
    <string name="prompt_new_password">New password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main_toolbar_title">Total Fitness</string>
    <string name="profile_menu_item">Profile</string>
    <string name="choose_mass_unit">Default mass unit</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="physical_activity_level">Physical activity level</string>
    <string name="target_weight">Target weight</string>
    <string name="current_weight">Current weight</string>
    <string name="current_bmi">BMI</string>
    <string name="title_update_credentials">Update credentials</string>
    <string name="action_update_credentials">Update</string>
    <string name="action_signup">Sign up</string>
    <string name="prompt_reg_username">username</string>
    <string name="prompt_reg_email">e-mail</string>
    <string name="action_cancel_signup">Cancel</string>
    <string name="prompt_reg_password">Enter password</string>
</resources>