<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.physicalhealth.PhysicalHealthFragment"
    tools:layout_editor_absoluteX="4dp"
    tools:layout_editor_absoluteY="5dp">

    <Spinner
        android:id="@+id/mass_unit_spinner"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/choose_mass_unit"
        app:layout_constraintStart_toEndOf="@+id/default_mass_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/default_mass_view"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/choose_mass_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height_view"
        android:layout_width="71dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_view" />

    <TextView
        android:id="@+id/age_view"
        android:layout_width="74dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_mass_view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="138dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/physical_activity_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="123dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/target_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="123dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/current_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/divider"
        android:layout_width="379dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/update_credenitals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_crendenitals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <LinearLayout
        android:layout_width="221dp"
        android:layout_height="241dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_credenitals">

        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/prompt_current_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            android:visibility="gone"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/verify_password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/prompt_verify_password"
            android:inputType="textPassword"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/update_credenitals_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:text="@string/update_crendenitals_button"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <Spinner
        android:id="@+id/activity_level_spinner"
        android:layout_width="196dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/height_view" />

</androidx.constraintlayout.widget.ConstraintLayout>